[gd_scene load_steps=2 format=3 uid="uid://dr0vbnu78ybx0"]

[ext_resource type="Script" path="res://hud.gd" id="1_6pyy1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6pyy1")

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.377
anchor_right = 1.0
anchor_bottom = 0.377
offset_left = 285.0
offset_top = -69.296
offset_right = -241.0
offset_bottom = 69.704
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "멧현우 피하기"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1021.0
offset_right = 1144.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.516
anchor_top = 1.0
anchor_right = 0.519
anchor_bottom = 1.0
offset_left = -118.432
offset_top = -251.0
offset_right = 121.112
offset_bottom = -106.0
theme_override_font_sizes/font_size = 100
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
